--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,17 @@
   -webkit-text-size-adjust: 100%;
 }
 
+h1 {
+  color: #1a1a1a;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ff0000;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #fa3600;
 }
 
 body {
@@ -48,7 +52,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ff5004;
 }
 button:focus,
 button:focus-visible {
@@ -61,7 +65,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #840000;
   }
   button {
     background-color: #f9f9f9;
